--- a/file_1_bad.html
+++ b/file_1_bad.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>page_1_bad</title>
+<html
+  class="zen-page _browser-name_yandexbrowser _browser-base_chromium _theme_white"
+  style="font-synthesis: none"
+>
+  <head>
+    <meta charset="utf-8" />
 
-    <meta property="og:url"  content="https://dzen.ru/suite/079d05d8-bf8b-42d3-8bfe-6bc59b6db279" />
+    <title>title</title>
+    <meta name="description" content="description" />
+    <meta name="og:description" content="description" />
+    <meta name="twitter:description" content="description" />
+    <meta property="og:title" content="title" />
+    <meta property="twitter:title" content="title" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Дзен" />
-    <meta property="og:title"  content="Подборка" />
-    <meta property="og:image"  content="https://avatars.dzeninfra.ru/get-zen-pub-og/271828/pubsuite_079d05d8-bf8b-42d3-8bfe-6bc59b6db279_66f6197651e2f10762ef64aa/orig" />
-    
+    <meta
+      property="og:image"
+      content="https://avatars.dzeninfra.ru/get-zen-pub-og/271828/pubsuite_079d05d8-bf8b-42d3-8bfe-6bc59b6db279_66f6197651e2f10762ef64aa/orig"
+    />
+    <meta
+      property="twitter:image"
+      content="https://avatars.dzeninfra.ru/get-zen-pub-og/271828/pubsuite_079d05d8-bf8b-42d3-8bfe-6bc59b6db279_66f6197651e2f10762ef64aa/orig"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="twitter:url"  content="https://dzen.ru/suite/079d05d8-bf8b-42d3-8bfe-6bc59b6db279" />
-    <meta property="twitter:title"  content="Подборка" />
-    <meta property="twitter:image"  content="https://avatars.dzeninfra.ru/get-zen-pub-og/271828/pubsuite_079d05d8-bf8b-42d3-8bfe-6bc59b6db279_66f6197651e2f10762ef64aa/orig" />
+    <meta
+      property="og:url"
+      content="https://dzen.ru/suite/079d05d8-bf8b-42d3-8bfe-6bc59b6db279"
+    />
+    <meta
+      property="twitter:url"
+      content="https://dzen.ru/suite/079d05d8-bf8b-42d3-8bfe-6bc59b6db279"
+    />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta name="viewport" content="width=960" />
-    <meta name="twitter:description"  content="Подборка" />
     <meta name="robots" content="index, follow" />
-    <meta name="og:description"  content="Подборка" />
-    <meta name="description"  content="Подборка" />
+    <meta name="viewport" content="width=960" />
     <meta name="format-detection" content="telephone=no" />
-</head>
-<body>
-  og_test
-</body>
+
+    <meta name="color-scheme" content="light" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  </head>
 </html>
