--- a/file_1_bad.html
+++ b/file_1_bad.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html
-  class="zen-page _browser-name_yandexbrowser _browser-base_chromium _theme_white"
+  class="zen-page _browser-name_twitterbot _theme_white"
   style="font-synthesis: none"
 >
   <head>
     <meta charset="utf-8" />
-
-    <title>title</title>
-    <meta name="description" content="description" />
-    <meta name="og:description" content="description" />
-    <meta name="twitter:description" content="description" />
-    <meta property="og:title" content="title" />
-    <meta property="twitter:title" content="title" />
+    <title>AVITO-лайфхаки | Расхламление и минимализм | Дзен</title>
+    <meta
+      name="description"
+      content="Подборка материалов «AVITO-лайфхаки» автора «Расхламление и минимализм» в Дзен ⭐: Где, как и почём? Десятки лайфхаков, которые помогут продать быстро и дорого"
+    />
+    <meta
+      name="og:description"
+      content="Подборка материалов «AVITO-лайфхаки» автора «Расхламление и минимализм» в Дзен ⭐: Где, как и почём? Десятки лайфхаков, которые помогут продать быстро и дорого"
+    />
+    <meta
+      name="twitter:description"
+      content="Подборка материалов «AVITO-лайфхаки» автора «Расхламление и минимализм» в Дзен ⭐: Где, как и почём? Десятки лайфхаков, которые помогут продать быстро и дорого"
+    />
+    <meta
+      property="og:title"
+      content="AVITO-лайфхаки | Расхламление и минимализм | Дзен"
+    />
+    <meta
+      property="twitter:title"
+      content="AVITO-лайфхаки | Расхламление и минимализм | Дзен"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Дзен" />
     <meta
@@ -41,4 +55,6 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   </head>
+
+  <body></body>
 </html>
