--- a/file_1_bad.html
+++ b/file_1_bad.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html
   class="zen-page _browser-name_yandexbrowser _browser-base_chromium _theme_white"
   style="font-synthesis: none"
