--- a/file_1_bad.html
+++ b/file_1_bad.html
@@ -173,5 +173,5 @@ ___________
       </style>
     </noscript>
   </head>
-  <body></body>
+  <body><span><div>bad div</div></span></body>
 </html>
