--- a/file_1_bad.html
+++ b/file_1_bad.html
@@ -1,177 +1,2 @@
-e<!DOCTYPE html>
-<html
-  class="zen-page _browser-name_yandexbrowser _browser-base_chromium _theme_white"
-  style="font-synthesis: none"
->
-  <head>
-    <meta charset="utf-8" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/logo-redesign-ios-512.png"
-    />
-    <link rel="icon" sizes="16x16" href="/logo-redesign-16.png" />
-    <link rel="icon" sizes="32x32" href="/logo-redesign-32.png" />
-    <link rel="icon" sizes="48x48" href="/logo-redesign-48.png" />
-    <link rel="icon" sizes="192x192" href="/logo-redesign-192.png" />
-    <link rel="icon" href="/logo-redesign-48.ico" type="image/x-icon" />
-    <link rel="icon" href="/logo-redesign-48.svg" type="image/svg+xml" />
-    <link rel="mask-icon" href="/logo-redesign-48.svg" />
-    <link rel="manifest" href="/manifest.webmanifest" />
-    <title>Расхламление и минимализм | Дзен</title>
-    <meta
-      name="description"
-      content="Канал автора «Расхламление и минимализм» в Дзен ⭐: ПОРЯДОК В ГОЛОВЕ И В ДОМЕ
-https://vk.com/tex2ality
-Самый большой русскоязычный блог про минимализм
-Красота, простота, гедонизм и осознаное потребление
-⠀
-За любую(❗️) критику – бан."
-    />
-    <meta
-      name="og:description"
-      content="Канал автора «Расхламление и минимализм» в Дзен ⭐: ПОРЯДОК В ГОЛОВЕ И В ДОМЕ
-https://vk.com/tex2ality
-Самый большой русскоязычный блог про минимализм
-Красота, простота, гедонизм и осознаное потребление
-⠀
-За любую(❗️) критику – бан. Нет, мне не нужно быть правой.
-___________
-Канал, где я учу писать нормальные тексты⤵️"
-    />
-    <meta
-      name="twitter:description"
-      content="Канал автора «Расхламление и минимализм» в Дзен ⭐: ПОРЯДОК В ГОЛОВЕ И В ДОМЕ
-https://vk.com/tex2ality
-Самый большой русскоязычный блог про минимализм
-Красота, простота, гедонизм и осознаное потребление
-⠀
-За любую(❗️) критику – бан. Нет, мне не нужно быть правой.
-___________
-Канал, где я учу писать нормальные тексты⤵️"
-    />
-    <meta property="og:title" content="Расхламление и минимализм | Дзен" />
-    <meta property="twitter:title" content="Расхламление и минимализм | Дзен" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Дзен" />
-    <meta
-      property="og:image"
-      content="https://avatars.dzeninfra.ru/get-zen-pub-og/271828/pub_615eb4504024235bd331cc7e_684c1c8c9c427c4fb8a55a2a/orig"
-    />
-    <meta
-      property="twitter:image"
-      content="https://avatars.dzeninfra.ru/get-zen-pub-og/271828/pub_615eb4504024235bd331cc7e_684c1c8c9c427c4fb8a55a2a/orig"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://dzen.ru/gominimal" />
-    <meta property="twitter:url" content="https://dzen.ru/gominimal" />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta name="robots" content="index, follow" />
-    <meta name="viewport" content="width=960" />
-    <meta property="zen_grouping_attr" content="26" />
-    <meta property="zen_object_id" content="-5362276428353320709" />
-    <meta name="format-detection" content="telephone=no" />
-    <link
-      rel="preload"
-      href="https://static.dzeninfra.ru/s3/zen-apps/dzen-layout/1.95.0/dzen-layout-desktop-login-modal.modern.bundle.js"
-      as="script"
-      nonce="JZBEQQOrIHftKUCZtfY6JxOcrh3CpjkC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="https://static.dzeninfra.ru/s3/zen-apps/dzen-layout/1.95.0/dzen-layout-desktop-thematic-catalog-drawer-manager-visible.modern.bundle.js"
-      as="script"
-      nonce="JZBEQQOrIHftKUCZtfY6JxOcrh3CpjkC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="https://static.dzeninfra.ru/s3/zen-apps/dzen-layout/1.95.0/dzen-layout-desktop.modern.bundle.js"
-      as="script"
-      nonce="JZBEQQOrIHftKUCZtfY6JxOcrh3CpjkC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="https://static.dzeninfra.ru/s3/zen-apps/desktop2/3.403.1/content.modern.bundle.js"
-      as="script"
-      nonce="JZBEQQOrIHftKUCZtfY6JxOcrh3CpjkC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="https://static.dzeninfra.ru/s3/zen-apps/channel/1.8.0/channel-desktop-login-modal.modern.bundle.js"
-      as="script"
-      nonce="JZBEQQOrIHftKUCZtfY6JxOcrh3CpjkC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="https://static.dzeninfra.ru/s3/zen-apps/channel/1.8.0/channel-desktop.modern.bundle.js"
-      as="script"
-      nonce="JZBEQQOrIHftKUCZtfY6JxOcrh3CpjkC"
-      crossorigin="anonymous"
-    />
-    <link rel="canonical" href="https://dzen.ru/gominimal" />
-    <link
-      rel="preload"
-      href="https://static.dzeninfra.ru/s3/zen-apps/desktop2/3.403.1/desktop2.modern.bundle.js"
-      as="script"
-      crossorigin="anonymous"
-    />
-    <meta name="color-scheme" content="light" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <noscript>
-      <style>
-        #ad-banner,
-        #branded-banner {
-          display: none;
-        }
-      </style>
-    </noscript>
-    <noscript>
-      <style>
-        #card-rtb {
-          display: none;
-        }
-      </style>
-    </noscript>
-    <noscript>
-      <style>
-        #floor-skeleton-more {
-          display: none;
-        }
-      </style>
-    </noscript>
-    <noscript>
-      <style>
-        #article-showcase-skeleton {
-          display: none;
-        }
-      </style>
-      <style>
-        #touch-article-showcase-skeleton {
-          display: none;
-        }
-      </style>
-    </noscript>
-    <noscript>
-      <style>
-        #article-showcase-card-rtb {
-          display: none;
-        }
-      </style>
-    </noscript>
-    <noscript>
-      <style>
-        #explore-floor-skeleton-more {
-          display: none;
-        }
-      </style>
-    </noscript>
-  </head>
-  <body><span><div>bad div</div></span></body>
-</html>
+<!DOCTYPE html>
+<html></html>
